--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.7.0' //Base de Datos
     implementation 'com.google.firebase:firebase-storage:19.2.2'  //Base de Archivos
     implementation 'com.google.firebase:firebase-firestore' //Firestore
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1' //Object Mapper
 }
