--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.proyectofct.salinappservice">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.Camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SALINAPPSERVICE">
+        <activity android:name=".Camara"></activity>
         <activity
             android:name=".BienvenidaActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,15 +31,25 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:theme="@style/Theme.SALINAPPSERVICE.NoActionBar"
-            android:label="HomeActivity"/>
+            android:label="HomeActivity"
+            android:theme="@style/Theme.SALINAPPSERVICE.NoActionBar" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".RecuperarPasswordActivity" />
         <activity android:name=".PerfilActivity" />
         <activity android:name=".RegistroActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".EmpresaRegistroActivity"/>
+        <activity android:name=".EmpresaRegistroActivity" />
         <activity android:name=".EmpresaLoginActivity" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
 </manifest>
